# NKTools

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/algorithm_dgdata/: dgdata.cpp  dgdata.h
src/algorithm_nksave/: nksave.cpp  nksave.h  rfc2898derivebytes.cpp  rfc2898derivebytes.h  savedata.cpp  savedata.h
